--- a/SongsServer/SongsServer/appsettings.json
+++ b/SongsServer/SongsServer/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "myProjDB": "Data Source=Media.ruppin.ac.il;Initial Catalog=igroup113_test2; User ID=igroup113; Password=igroup113_82421"
+  }
 }
