--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 x64/
 [Bb]in/
 [Oo]bj/
+*/Debug/*
 # build folder is nowadays used for build scripts and should not be ignored
 #build/
 
@@ -56,6 +57,7 @@ x64/
 .builds
 *.pidb
 *.scc
+*.dll
 
 # Visual C++ cache files
 ipch/
