--- a/.gitignore
+++ b/.gitignore
@@ -13,12 +13,12 @@
 *.sln.docstates
 
 # Build results
-[Dd]ebug/
-[Rr]elease/
-x64/
-[Bb]in/
-[Oo]bj/
-*/Debug/*
+[Dd]ebug\
+[Rr]elease\
+x64\
+[Bb]in\
+[Oo]bj\
+*\Debug\*
 # build folder is nowadays used for build scripts and should not be ignored
 #build/
 
